--- a/app/package.json
+++ b/app/package.json
@@ -5,11 +5,10 @@
   "window": {
     "title": "Cram",
     "toolbar": false,
-    "frame": true,
+    "frame": false,
     "width": 800,
     "height": 500,
-    "min_width": 400,
-    "min_height": 200,
+    "resizable" : false,
     "position": "center"
   }
 }
