--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "grunt": "latest",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-node-webkit-builder": "latest"
+  },
+  "dependencies": {
+    "firebase": "^2.2.4"
   }
 }
